--- a/endpoints/adminEndpoint/views/admin-page/styles/main/main.scss
+++ b/endpoints/adminEndpoint/views/admin-page/styles/main/main.scss
@@ -347,6 +347,7 @@ div.cell-container__text-input-container {
 			outline: none;
 		}
 
+		cursor: text;
 		max-width: 80%;
 		padding: 0px 21px;
 		text-align: center;
