--- a/endpoints/rootEndpoint/views/root-page/index.ejs
+++ b/endpoints/rootEndpoint/views/root-page/index.ejs
@@ -264,7 +264,7 @@
 			</div>
 			<% } %>
 			<div class="product-section-container">
-				<% Object.keys(builder.products).forEach((category) => { %>
+				<% Object.keys(builder.products).forEach((category, index) => { %>
 				<div product-section>
 					<div>
 						<h1><%= category %></h1>
@@ -320,7 +320,49 @@
 						<% }) %>
 					</div>
 				</div>
-				<% }) %>
+				<% if (builder.propagandas.length > 2 &&
+				Object.keys(builder.products).length > 2 &&
+				Math.floor(Object.keys(builder.products).length / 2) === index) { %>
+				<div class="product-section-container__propagandas-pop-container">
+					<div>
+						<% for (let c = builder.propagandas.length - 1; c >
+						builder.propagandas.length - 3; c--) { %> <% if
+						(builder.propagandas[c].link) { %>
+						<a
+							href="<%= builder.propagandas[c].link %>"
+							target="_blank"
+							rel="noopener noreferrer"
+						>
+							<picture>
+								<source
+									media="(min-width: 490px)"
+									srcset="<%= builder.propagandas[c]['big-image'] %>"
+								/>
+								<img
+									draggable="false"
+									src="<%= builder.propagandas[c]['small-image'] %>"
+									alt="Propaganda"
+								/>
+							</picture>
+						</a>
+						<% } else { %>
+						<a>
+							<picture>
+								<source
+									media="(min-width: 490px)"
+									srcset="<%= builder.propagandas[c]['big-image'] %>"
+								/>
+								<img
+									draggable="false"
+									src="<%= builder.propagandas[c]['small-image'] %>"
+									alt="Propaganda"
+								/>
+							</picture>
+						</a>
+						<% } %> <% } %>
+					</div>
+				</div>
+				<% } %> <% }) %>
 			</div>
 		</main>
 
