--- a/endpoints/rootEndpoint/views/root-page/styles/main/main.css
+++ b/endpoints/rootEndpoint/views/root-page/styles/main/main.css
@@ -122,7 +122,7 @@ div.product-section-container > div > div:last-of-type > div a i {
     height: 170px;
   }
 }
-div.product-section-container > div > div:last-of-type, div.product-section-container > div > div:first-of-type {
+div.product-section-container__propagandas-pop-container, div.product-section-container > div > div:last-of-type, div.product-section-container > div > div:first-of-type {
   padding-right: 21px;
   padding-left: 21px;
 }
@@ -136,13 +136,13 @@ div.product-section-container > div > div:first-of-type h1 {
 }
 
 @media (min-width: 375px) {
-  div.product-section-container > div > div:last-of-type, div.product-section-container > div > div:first-of-type {
+  div.product-section-container__propagandas-pop-container, div.product-section-container > div > div:last-of-type, div.product-section-container > div > div:first-of-type {
     padding-right: 28px;
     padding-left: 28px;
   }
 }
 @media (min-width: 650px) {
-  div.product-section-container > div > div:last-of-type, div.product-section-container > div > div:first-of-type {
+  div.product-section-container__propagandas-pop-container, div.product-section-container > div > div:last-of-type, div.product-section-container > div > div:first-of-type {
     padding-right: 56px;
     padding-left: 56px;
   }
@@ -156,7 +156,7 @@ div.product-section-container > div > div:first-of-type h1 {
   }
 }
 @media (min-width: 1300px) {
-  div.product-section-container > div > div:last-of-type, div.product-section-container > div > div:first-of-type {
+  div.product-section-container__propagandas-pop-container, div.product-section-container > div > div:last-of-type, div.product-section-container > div > div:first-of-type {
     padding-right: 15.4vw;
     padding-left: 15.4vw;
   }
@@ -165,7 +165,7 @@ div.product-section-container > div > div:first-of-type h1 {
   }
 }
 @media (min-width: 1700px) {
-  div.product-section-container > div > div:last-of-type, div.product-section-container > div > div:first-of-type {
+  div.product-section-container__propagandas-pop-container, div.product-section-container > div > div:last-of-type, div.product-section-container > div > div:first-of-type {
     padding-right: 21vw;
     padding-left: 21vw;
   }
@@ -174,7 +174,7 @@ div.product-section-container > div > div:first-of-type h1 {
   }
 }
 @media (min-width: 2880px) {
-  div.product-section-container > div > div:last-of-type, div.product-section-container > div > div:first-of-type {
+  div.product-section-container__propagandas-pop-container, div.product-section-container > div > div:last-of-type, div.product-section-container > div > div:first-of-type {
     padding-right: 30%;
     padding-left: 30%;
   }
@@ -186,6 +186,7 @@ main {
 }
 
 div.propagandas-container {
+  width: 100vw;
   position: relative;
 }
 div.propagandas-container button {
@@ -236,7 +237,9 @@ div.propagandas-container > p {
 }
 
 div.product-section-container {
+  z-index: 1;
   padding: 35px 0;
+  position: relative;
 }
 div.product-section-container > div {
   padding: 42px 0;
@@ -249,6 +252,7 @@ div.product-section-container > div.--special {
 }
 div.product-section-container > div.--special::before {
   content: "";
+  z-index: -1;
   width: 305px;
   height: 305px;
   border-radius: 100%;
@@ -260,6 +264,7 @@ div.product-section-container > div.--special::before {
 }
 div.product-section-container > div.--special::after {
   content: "";
+  z-index: -1;
   width: 305px;
   height: 305px;
   border-radius: 100%;
@@ -318,13 +323,34 @@ div.product-section-container > div > div:last-of-type > div {
   width: 100%;
 }
 
+div.product-section-container__propagandas-pop-container {
+  z-index: 2;
+}
+div.product-section-container__propagandas-pop-container > div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 14px;
+}
+div.product-section-container__propagandas-pop-container > div a:last-of-type {
+  display: none;
+}
+div.product-section-container__propagandas-pop-container > div img {
+  width: 100%;
+  border-radius: 7px;
+  object-fit: cover;
+}
+
 @media (min-width: 490px) {
   main {
     padding-top: 140px;
   }
   div.propagandas-container > div:first-of-type img {
-    width: 100vw;
     height: 41vw;
+  }
+  div.product-section-container__propagandas-pop-container > div img {
+    height: 35vw;
   }
 }
 @media (min-width: 870px) {
@@ -332,7 +358,6 @@ div.product-section-container > div > div:last-of-type > div {
     padding: 84px 0 140px 0;
   }
   div.propagandas-container > div:first-of-type img {
-    width: 100vw;
     height: auto;
   }
   div.product-section-container {
@@ -342,6 +367,9 @@ div.product-section-container > div > div:last-of-type > div {
     filter: opacity(100%);
     width: 420px;
     height: 420px;
+  }
+  div.product-section-container__propagandas-pop-container > div img {
+    height: auto;
   }
 }
 @media (min-width: 1300px) {
@@ -354,6 +382,22 @@ div.product-section-container > div > div:last-of-type > div {
   }
   div.propagandas-container button:last-of-type {
     right: 41px;
+  }
+}
+@media (min-width: 1700px) {
+  div.product-section-container__propagandas-pop-container > div {
+    flex-direction: row;
+  }
+  div.product-section-container__propagandas-pop-container > div a:last-of-type {
+    display: block;
+  }
+  div.product-section-container__propagandas-pop-container > div img {
+    height: 21vh;
+  }
+}
+@media (min-width: 2000px) {
+  div.product-section-container__propagandas-pop-container > div img {
+    height: auto;
   }
 }
 
