--- a/endpoints/rootEndpoint/views/root-page/index.ejs
+++ b/endpoints/rootEndpoint/views/root-page/index.ejs
@@ -218,7 +218,7 @@
 		<main>
 			<% if (builder.propagandas.length > 0) { %>
 			<div image-slider-container class="propagandas-container">
-				<button tabindex="-1">
+				<button class="--off">
 					<i class="fa-solid fa-angle-left"></i>
 				</button>
 				<div>
@@ -258,7 +258,7 @@
 					<% } %> <% }) %>
 				</div>
 				<p><%= builder.footer['store-info'] %></p>
-				<button tabindex="-1">
+				<button>
 					<i class="fa-solid fa-angle-right"></i>
 				</button>
 			</div>
