--- a/endpoints/adminEndpoint/views/admin-page/index.ejs
+++ b/endpoints/adminEndpoint/views/admin-page/index.ejs
@@ -781,7 +781,7 @@
 								<th>Nome</th>
 								<th>Preço</th>
 								<th>Promoção</th>
-								<th>Parcelas</th>
+								<th>Descrição</th>
 								<th>Whatsapp</th>
 								<th>Mensagem</th>
 							</tr>
@@ -992,10 +992,10 @@
 												class="cell-container__content-container cell-container__text-input-container"
 											>
 												<div
-													product-installment
+													product-description
 													pseudo-input
 													contenteditable="true"
-													placeholder="Parcelas"
+													placeholder="Descrição"
 													maxlength="70"
 												></div>
 											</div>
