--- a/endpoints/rootEndpoint/views/root-page/index.ejs
+++ b/endpoints/rootEndpoint/views/root-page/index.ejs
@@ -116,7 +116,7 @@
 											<p product-name></p>
 											<p product-old-price></p>
 											<p product-price></p>
-											<p product-installment></p>
+											<p product-description></p>
 										</div>
 									</div>
 									<a product-link target="_blank" rel="noopener noreferrer">
@@ -305,7 +305,7 @@
 									<p></p>
 									<p price><%= product.price %></p>
 									<% } %>
-									<p><%= product.installment %></p>
+									<p><%= product.description %></p>
 								</div>
 							</div>
 							<a
